Build address and create API for CRUD address

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "start": "nodemon --inspect src/server.js",
         "migrate": "node scripts/migrate.js",
         "seeds": "node scripts/seeds.js",
+        "buildAddresses": "node scripts/buildAddress.js",
         "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --runInBand --forceExit"
     },
     "keywords": [],
