--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "seeds": "node scripts/seeds.js",
         "buildAddresses": "node scripts/buildAddress.js",
         "insertProducts": "node scripts/insertProduct.js",
-        "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --runInBand --forceExit"
+        "test": "jest --coverage"
     },
     "keywords": [],
     "author": "",
